<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerlayout"
    tools:context=".MainActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-35dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="380dp"
                android:layout_height="115dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="9dp"
                android:background="@drawable/bardesign"
                android:clickable="true"
                android:gravity="center|left"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout6">


                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/app_name"
                    android:gravity="center"
                    android:padding="5dp"

                    android:src="@drawable/pagandam" />

                <TextView
                    android:id="@+id/pagAndam_text"
                    android:layout_width="282dp"
                    android:layout_height="90dp"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/pagAndam_text"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                tools:ignore="MissingConstraints"
                android:orientation="vertical">
            </LinearLayout>


            <LinearLayout
                android:id="@+id/paglikas_btn"
                android:layout_width="380dp"
                android:layout_height="115dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="9dp"
                android:background="@drawable/bardesign"
                android:clickable="true"
                android:gravity="center|left"

                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <ImageView
                    android:layout_width="97dp"
                    android:layout_height="80dp"
                    android:layout_margin="0dp"
                    android:contentDescription="@string/app_name"
                    android:padding="5dp"
                    android:src="@drawable/paglikas" />

                <TextView
                    android:id="@+id/pagLikas_text"
                    android:layout_width="270dp"
                    android:layout_height="73dp"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/pagLikas_text"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="380dp"
                android:layout_height="115dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="9dp"
                android:background="@drawable/bardesign"
                android:gravity="center|left"

                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/paglikas_btn">

                <ImageView
                    android:layout_width="97dp"
                    android:layout_height="80dp"
                    android:layout_margin="0dp"
                    android:contentDescription="@string/app_name"
                    android:padding="5dp"
                    android:src="@drawable/pagarobulig" />

                <TextView
                    android:id="@+id/pagArobulig_text"
                    android:layout_width="270dp"
                    android:layout_height="73dp"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/pagAroBulig_text"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    android:textStyle="bold"

                    />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="380dp"
                android:layout_height="115dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="9dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/bardesign"
                android:gravity="center|left"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <ImageView
                    android:layout_width="97dp"
                    android:layout_height="80dp"
                    android:layout_margin="0dp"
                    android:contentDescription="@string/app_name"
                    android:padding="5dp"
                    android:src="@drawable/faq" />

                <TextView
                    android:layout_width="270dp"
                    android:layout_height="73dp"
                    android:gravity="center"
                    android:text="@string/faqs"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    android:textStyle="bold"

                    />


            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



    <View
        android:id="@+id/viewDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"
        app:layout_constraintBaseline_toTopOf="@id/viewDivider" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/header_background"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="43dp"
            android:layout_height="52dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/applogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bungee_inline"
            android:text="IAKSYONPADAYON.PH"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/nav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.666" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/nav" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@drawable/nav_header"
            app:itemIconTint="@drawable/nav_selector"
            app:itemTextColor="@drawable/nav_selector"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/navigation_menu"
            tools:layout_editor_absoluteX="16dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>